--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
   },
   "homepage": "https://github.com/eordano/payperhit",
   "dependencies": {
+    "async": "^0.9.0",
+    "bitcore": "git://github.com/bitpay/bitcore.git",
+    "bitcore-channel": "git://github.com/bitpay/bitcore-channel.git",
+    "body-parser": "^1.10.1",
+    "express": "^4.11.0",
     "level": "^0.18.0"
   }
 }
